Fix close nav button on safari
-Remove height on safari to allow for close button to appear/

--- a/wp-content/themes/suffolkdown/assets/styles/suffolkdown.css
+++ b/wp-content/themes/suffolkdown/assets/styles/suffolkdown.css
@@ -362,9 +362,8 @@ p {
 
 .close-nav-button {
 	font-size: 80px;
-	height: 10px;
 	padding-right: 20px;
-	z-index: 1001px;
+	/*z-index: 1001px;*/
 }
 
 .main-navigation {
